@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class AdvertisementUI {
}

class AdvertisementController {
    + createCategory(categoryDTO CategoryDTO)
}

class AdvertisementService {
    + createCategory(categoryDTO CategoryDTO)
}

interface AdvertisementRepository {
    + save(advertiment Advertisement)
}

class AdvertisementMapper {
    + toDTO(AdvertisementDTO advertisementDTO)
}

class Advertisement {
    - id: String
    - title: String
    - description: String
    - date: Date
    - municipality: String
    - status: AdvertisementStatus
    + Advertisement(...)
}

enum AdvertisementStatus {
    ACTIVE
    CLOSED
}

class AdvertisementDTO {
    - id: String
    - title: String
    - description: String
    - date: Date
    - status: String
    - itemDTO: ItemDTO
    - address: String
    + AdvertisementDTO(..)
}

class ItemDTO {
    - id: String
    - condition
    - image: String
    - category: CategoryDTO
    + ItemDTO(...)
}

AdvertisementUI .> AdvertisementController
AdvertisementController ..> AdvertisementService
AdvertisementService ..> AdvertisementRepository
AdvertisementService ..> AdvertisementMapper
AdvertisementRepository "1" --> "*" Advertisement : advertisement
AdvertisementMapper ..> Advertisement
AdvertisementMapper ..> AdvertisementDTO
AdvertisementDTO "1" --> "1" ItemDTO
Advertisement --> AdvertisementStatus : has

@enduml